--- a/Prestamo_backend/src/main/resources/application.properties
+++ b/Prestamo_backend/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=Prestamo_backend
 server.port = 8090
 
 spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/dbloan
-spring.datasource.username=user_loan
+spring.datasource.username=loan
 spring.datasource.password=2024
 spring.jpa.hibernate.ddl-auto=update
