--- a/Prestamo_backend/src/main/resources/application.properties
+++ b/Prestamo_backend/src/main/resources/application.properties
@@ -4,4 +4,6 @@ server.port = 8090
 spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/dbloan
 spring.datasource.username=loan
 spring.datasource.password=2024
+spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.time-zone=UTC
 spring.jpa.hibernate.ddl-auto=update
