--- a/Prestamo_frontend/.env
+++ b/Prestamo_frontend/.env
@@ -1,2 +1,2 @@
-VITE_PAYROL_BACKEND_SERVER = localhost
-VITE_PAYROLL_BACKEND_PORT = 8090
+VITE_PRESTAMO_BACKEND_SERVER=localhost
+VITE_PRESTAMO_BACKEND_PORT=8090
