--- a/Prestamo_frontend/.env
+++ b/Prestamo_frontend/.env
@@ -1,2 +1,2 @@
-VITE_PRESTAMO_BACKEND_SERVER=192.168.100.54
+VITE_PRESTAMO_BACKEND_SERVER=http://loandeposit-app.brazilsouth.cloudapp.azure.com
 VITE_PRESTAMO_BACKEND_PORT=8090
